[project]
name = "lolapy"
version = "0.2.0"
authors = [
  { name="Alejandro Pirola", email="alejandro@leapfinancial.com" },
]
description = "This project is a Python SDK for the Prompter API. It is intended to be used by developers who want to integrate Lola into their own applications."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'schedule>=1.2.0'
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[project.urls]
"Homepage" = "https://github.com/alejamp/lola-py-sdk"
"Bug Tracker" = "https://github.com/alejamp/lola-py-sdk/issues"